--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11392652928"></script>
     <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-11392652928'); </script>
+    <center>
+        <div style="max-width: 500px; padding: 0px; margin: 0px;">
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXVCIv.jpeg"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXV2uk.jpeg"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/04/ddaGqkR.jpeg"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXV6wE.jpeg"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
+        </div>
+    </center>
 </head>
 
 <body>
