--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-11392652928'); </script>
     <center>
         <div style="max-width: 500px; padding: 0px; margin: 0px;">
-            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXVCIv.jpeg"></a>
+            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/05/ddvBxwz.webp"></a>
             <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
             <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXV2uk.jpeg"></a>
             <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://sv1.picz.in.th/images/2023/11/03/ddXGqjy.gif"></a>
