--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-11392652928'); </script>
     <center>
         <div style="max-width: 500px; padding: 0px; margin: 0px;">
-            <a href="https://wildbet88.com/register?ref=547557" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://ฝากรูป.com/ib/uDa8pE4tQ2yWAsJ_1699522549.webp"></a>
+            <a href="https://page.line.me/wildbet88" rel="nofollow" rel="noopener"><img style="width: 100%;" src="https://ฝากรูป.com/ib/uDa8pE4tQ2yWAsJ_1699522549.webp"></a>
         </div>
     </center>
 </head>
