--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11392652928"></script>
     <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-11392652928'); </script>
+    <center>
+        <div style="max-width: 500px; padding: 0px; margin: 0px;">
+            <a href="https://lin.ee/9WAYJes" rel="nofollow" rel="noopener"><img style="width: 100%;" src="assets/ezgif-2-30336d333e.webp"></a>
+        </div>
+    </center>
 </head>
 
 <body>
